# rldog

./: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml  test.py
reqs/: dev.txt  prod.txt
rldog/agents/: base_agent.py
rldog/agents/DQN_based/: DQN.py
rldog/agents/actor_critics/: A2C.py
rldog/agents/policy_gradients/: PPO.py  REINFORCE.py
rldog/configs/: BlackJack_config.py  CartPole_config.py  FrozenLake_config.py  Monazco_config.py  base_config.py
rldog/dataclasses/: DQN_dataclasses.py  actor_critic_dataclasses.py  generic.py  policy_dataclasses.py
rldog/examples/: CartPole.py  FrozenLake.py  FrozenLake_2.py  FrozenLake_3.py  FrozenLake_PPO.py  Monazco.py
rldog/networks/: base_nn.py  basic_nn.py  networks.py  standard_nn.py
rldog/saved_models/: CartPole_PPO_4_2_2_64_03012023
rldog/tools/: logger.py  plotters.py  ppo_experience_generator.py
tests/: test_A2C.py  test_DQN.py  test_PPO.py  test_ppo_experience_generator.py  test_reinforce.py
